# online-chat

./: .dockerignore  .gitignore  API.md  CMakeLists.txt  README.md  SPEC.md  prompt.md  使用手册.md  测试结果-playwright.md  项目接口测试-curl.md  项目接口测试-palywright.md
config/: .gitkeep  config.json  config.local.json.example
docker/: .env.example  Dockerfile  docker-compose.yml
frontend/: .gitkeep  admin.html  chat.html  gen-env.sh  index.html
frontend/css/: style.css
frontend/js/: admin.js  api.js  auth.js  chat.js  env.js  ui.js  ws.js
models/: model.json
sql/: schema.sql
src/: main.cc
src/controllers/: .gitkeep  admin_controller.cc  admin_controller.h  auth_controller.cc  auth_controller.h  friend_controller.cc  friend_controller.h  group_controller.cc  group_controller.h  message_controller.cc  message_controller.h  user_controller.cc  user_controller.h  ws_gateway.cc  ws_gateway.h
src/dao/: .gitkeep  db_client.h  redis_client.h
src/filters/: .gitkeep  jwt_filter.cc  jwt_filter.h
src/services/: .gitkeep  auth_service.cc  auth_service.h  friend_service.cc  friend_service.h  group_service.cc  group_service.h  message_service.cc  message_service.h  user_service.cc  user_service.h
src/utils/: .gitkeep  config.h  config_drogon.h  conversation.h  errors.h  jwt_util.h  password_util.h  response.h  smtp_client.h  sql_util.h  ws_protocol.h
tests/: CMakeLists.txt  test_admin_util.cpp  test_config.cpp  test_errors.cpp  test_friend_util.cpp  test_group_util.cpp  test_jwt.cpp  test_message_util.cpp  test_password.cpp  test_smtp_util.cpp  test_ws_gateway.cpp  test_ws_protocol.cpp
